<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/codeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:enabled="false"
            android:hint="@string/hint_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/convergence"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/typeLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/hint_type_request"
            app:layout_constraintEnd_toEndOf="@+id/codeLayout"
            app:layout_constraintStart_toStartOf="@+id/codeLayout"
            app:layout_constraintTop_toBottomOf="@+id/codeLayout">

            <AutoCompleteTextView
                android:id="@+id/typeRequest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/convergence"
                android:inputType="none"
                android:labelFor="@+id/typeRequest" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/quantityLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_quantity"
            app:layout_constraintEnd_toEndOf="@+id/typeLayout"
            app:layout_constraintStart_toStartOf="@+id/typeLayout"
            app:layout_constraintTop_toBottomOf="@+id/typeLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/convergence"
                android:imeOptions="actionNext"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priceLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_total_price"
            app:layout_constraintEnd_toEndOf="@+id/quantityLayout"
            app:layout_constraintStart_toStartOf="@+id/quantityLayout"
            app:layout_constraintTop_toBottomOf="@+id/quantityLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/totalPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/convergence"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/detailLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_detail"
            app:layout_constraintEnd_toEndOf="@+id/priceLayout"
            app:layout_constraintStart_toStartOf="@+id/priceLayout"
            app:layout_constraintTop_toBottomOf="@+id/priceLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/convergence"
                android:inputType="text"
                android:lines="5"
                android:maxLines="5" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/request"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/convergence"
            android:text="@string/label_request"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/detailLayout"
            app:layout_constraintStart_toStartOf="@+id/detailLayout"
            app:layout_constraintTop_toBottomOf="@+id/detailLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>